# sirop

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: check.md  commit.md  docs-audit.md  new-importer.md  sirop-query.md
.claude/hooks/: block_protected_commit.sh  session_start.sh
.claude/scripts/: docs_audit.py  sirop_query.py
.claude/skills/docs-audit/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: currencies.yaml  messages.yaml  reports.yaml  tax_rules.yaml
config/importers/: ndax.yaml  shakepay.yaml  sparrow.yaml  xpub.yaml  xpub_example.yaml
docs/ref/: architecture.md  bitcoin-node-validation-module.md  branch-model.md  crypto-tax-reference-quebec-2025.md  data-pipeline.mermaid  database-schema.md  logging-spec.md  output-channels.md  reconciliation-and-missing-data.md  security-input-hardening.md  sirop-language-guide.md  transaction-import-formats.md  tui-design-guidelines.md
docs/usage/: sirop-boil.md  sirop-create.md  sirop-pour.md  sirop-stir.md  sirop-tap.md
src/sirop/: __main__.py
src/sirop/cli/: boil.py  create.py  list_batches.py  pour.py  stir.py  switch.py  tap.py
src/sirop/config/: settings.py
src/sirop/db/: connection.py  repositories.py  schema.py
src/sirop/engine/: acb.py  superficial_loss.py
src/sirop/importers/: __init__.py  base.py  detector.py  ndax.py  shakepay.py  sparrow.py  xpub.py
src/sirop/models/: adjustment.py  disposition.py  enums.py  event.py  importer.py  messages.py  override.py  raw.py  transaction.py  wallet.py
src/sirop/node/: __init__.py  address_scanner.py  graph.py  mempool_client.py  models.py  privacy.py  verify.py
src/sirop/normalizer/: normalizer.py
src/sirop/reports/: formatter.py
src/sirop/transfer_match/: graph_analysis.py  matcher.py
src/sirop/ui/: __init__.py  prompts.py  tables.py
src/sirop/utils/: boc.py  console.py  crypto_prices.py  logging.py  messages.py  price_cache.py
tests/: conftest.py  test_acb_engine.py  test_address_scanner.py  test_boc.py  test_boc_live.py  test_boil_acb.py  test_crypto_prices.py  test_crypto_prices_live.py  test_db_connection.py  test_detector.py  test_graph.py  test_graph_analysis.py  test_manual_adjustments.py  test_mempool_client.py  test_messages.py  test_models.py  test_ndax_importer.py  test_no_raw_input.py  test_node_verify.py  test_normalizer.py  test_pour_formatter.py  test_price_cache.py  test_privacy.py  test_reward_treatment.py  test_shakepay_importer.py  test_sparrow_importer.py  test_stir.py  test_superficial_loss.py  test_tap.py  test_ui.py  test_verify_stage.py  test_xpub_importer.py
tests/fixtures/: cross_ndax.csv  cross_shakepay.csv  cross_sparrow.csv  ndax_non_fiat_trade.csv  ndax_simple_buy_sell_2025.csv  ndax_synthetic_ledger_v1.csv  shakepay_synthetic.csv  sparrow_btc.csv  sparrow_fiat.csv  sparrow_locale.csv  sparrow_sats.csv
