[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sirop"
version = "0.2.0"
description = "Canadian/Quebec Bitcoin‑First Crypto Tax Calculator"
packages = [{include = "sirop", from = "src"}]

[tool.poetry.scripts]
sirop = "sirop.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0"
pydantic-settings = "^2.0"
rich = "^14.3.3"
bip-utils = "^2.12.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8"
mypy = "^1.13"
pytest = "^8.0"
types-PyYAML = "*"
pre-commit = "^4.5.1"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM",
    "TCH", "RUF", "S", "PTH", "ERA", "PL",
]
ignore = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["sirop"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["sirop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "slow: marks tests that call external APIs or node",
    "integration: marks tests requiring a live Bitcoin node",
]
