[build-system]
requires = ["uv_build>=0.8,<0.10"]
build-backend = "uv_build"

[project]
name = "sirop"
version = "0.4.0"
description = "Canadian/Quebec Bitcoin‑First Crypto Tax Calculator"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyyaml>=6.0,<7.0",
    "pydantic-settings>=2.0,<3.0",
    "rich>=14.3.3,<15.0.0",
    "pygments>=2.20.0",
    "embit>=0.4.9",
    "click>=8.1,<9.0",
    "rich-click>=1.8,<2.0",
]

[project.scripts]
sirop = "sirop.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.8,<0.9",
    "mypy>=1.13,<2.0",
    "pytest>=9.0,<10.0",
    "types-PyYAML",
    "pre-commit>=4.5.1,<5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM",
    "TCH", "RUF", "S", "PTH", "ERA", "PL", "T20",
]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
# Standalone Claude Code skill scripts legitimately print to stdout
# for piping into other tools.
".claude/scripts/*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["sirop"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["sirop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "slow: marks tests that call external APIs or node",
    "integration: marks tests requiring a live Bitcoin node",
]
